cleanup, fixed bottom right scroll misalignment

--- a/coderbounty/static/css/style.css
+++ b/coderbounty/static/css/style.css
@@ -401,7 +401,7 @@ em {
 	height:43px;
 	width:76px;
 	right:-10px;
-	bottom:-2px;}
+	bottom:-4px;}
 .frame-dark-paper .bugfix-top {
 	position:relative;
 	top:20px;
